Bug 574170 - Add coloring to the stack frames of the debug thread view
and add an action to enable/disable colorization from the context menu.
  All of the categorize can be switched on or off
Add a couple of tests for stack frame grouping.

--- a/org.eclipse.jdt.debug.ui/plugin.properties
+++ b/org.eclipse.jdt.debug.ui/plugin.properties
@@ -98,6 +98,8 @@ JavaSnippetEditor.label= Scrapbook
 javaStepFilterPrefName=Step Filtering
 javaDetailFormattersPrefName=Detail Formatters
 
+javaStackFramePrefName=Stack Frames
+
 javaVariableHoverLabel=Variable Values
 javaVariableHoverDescription=Shows the value of the selected variable when debugging.
 
@@ -183,6 +185,9 @@ showNullEntriesAction.tooltip=Show Null Array Entries
 
 collapseStackFrames.label=Collapse Stack Frames
 collapseStackFrames.tooltip=Hide less relevant stack frames
+
+colorizeStackFrames.label=Mark Stack Frames with &Colors
+colorizeStackFrames.tooltip=Based on the function mark the stack frames with different colors
 
 stepIntoSelectionHyperlinkDetector.label=Step Into Selection
 stepIntoSelectionHyperlinkDetector.description=Performs the step into selection command on demand via a hyperlink
@@ -294,6 +299,36 @@ InDeadlockColorDefinition.description=The color used to render deadlocked thread
 
 LabeledObjectColorDefinition.label=Labeled objects
 LabeledObjectColorDefinition.description=The color used to render labeled objects in debug views.
+
+CustomFilteredStackFrameFgColorDefinition.label=Highlighted methods
+CustomFilteredStackFrameBgColorDefinition.label=Highlighted methods background
+CustomFilteredStackFrameFgColorDefinition.description=The color used to render the Highlighted stack frames in the Debug view.
+CustomFilteredStackFrameBgColorDefinition.description=The background color used to render the Highlighted stack frames in the Debug view.
+
+SyntheticStackFrameFgColorDefinition.label=Synthetic methods
+SyntheticStackFrameBgColorDefinition.label=Synthetic methods background
+SyntheticStackFrameFgColorDefinition.description=The color used to render stack frames for synthetic methods in the Debug view.
+SyntheticStackFrameBgColorDefinition.description=The background color used to render stack frames for synthetic methods in the Debug view.
+
+PlatformStackFrameFgColorDefinition.label=Platform methods
+PlatformStackFrameBgColorDefinition.label=Platform methods background
+PlatformStackFrameFgColorDefinition.description=The color used to render stack frames for Platform methods in the Debug view.
+PlatformStackFrameBgColorDefinition.description=The background color used to render stack frame for Platform methods in the Debug view.
+
+TestStackFrameFgColorDefinition.label=Your Test code
+TestStackFrameBgColorDefinition.label=Your Test code background
+TestStackFrameFgColorDefinition.description=The color used to render stack frames for Your Test code in the Debug view.
+TestStackFrameBgColorDefinition.description=The background color used to render stack frames for Your Test code in the Debug view.
+
+LibraryStackFrameFgColorDefinition.label=Library code
+LibraryStackFrameBgColorDefinition.label=Library code background
+LibraryStackFrameFgColorDefinition.description=The color used to render stack frames for Library code in the Debug view.
+LibraryStackFrameBgColorDefinition.description=The background color used to render stack frames for Library code in the Debug view.
+
+ProductionStackFrameFgColorDefinition.label=Your Source code
+ProductionStackFrameBgColorDefinition.label=Your Source code background
+ProductionStackFrameFgColorDefinition.description=The color used used to render stack frames for Your Source code in the Debug view.
+ProductionStackFrameBgColorDefinition.description=The background color used to render stack frames for Your Source code in the Debug view.
 
 javaStackTraceConsole.label= Java Stack Trace Console
 FormatStackTraceActionDelegate.name= Format
