--- a/org.eclipse.jdt.debug.ui/ui/org/eclipse/jdt/internal/debug/ui/DebugUIMessages.properties
+++ b/org.eclipse.jdt.debug.ui/ui/org/eclipse/jdt/internal/debug/ui/DebugUIMessages.properties
@@ -47,6 +47,40 @@ JavaHotCodeReplaceListener_0=<unknown>
 JavaPrimitivesPreferencePage_0=Primitive Display Options
 JavaPrimitivesPreferencePage_1=Display options for primitive values
 
+JavaStackFramesPreferencePage_title=Stack Frame Colors
+JavaStackFramesPreferencePage_description=Color of the Stack Frames set accordingly to these filters when 'Mark Stack Frames differently' toggle is activated.
+JavaStackFramesPreferencePage__Color_stack_frames=Mark stack frames differently
+JavaStackFramesPreferencePage__Collapse_stack_frames=Collapse non relevant stack frames
+JavaStackFramesPreferencePage_Defined_stack_frame_filters_for_platform=Filters to define &platform methods:
+JavaStackFramesPreferencePage_Defined_custom_stack_frame_filters=Filters for highlighted stack frames:
+JavaStackFramesPreferencePage_Appearance_of_stack_frames=&Appearance of the stack frames:
+JavaStackFramesPreferencePage_fg_color=&Foreground color
+JavaStackFramesPreferencePage_bg_color=&Background color
+JavaStackFramesPreferencePage_category_custom_filter=Highlighted methods
+JavaStackFramesPreferencePage_category_synthetic=Synthetic methods
+JavaStackFramesPreferencePage_category_platform=Platform methods
+JavaStackFramesPreferencePage_category_test=Your test code
+JavaStackFramesPreferencePage_category_production=Your source code
+JavaStackFramesPreferencePage_category_library=Library code
+JavaStackFramesPreferencePage_Filter_custom=Mark &highlighted stack frames differently
+JavaStackFramesPreferencePage_Filter_synthetic=Mark s&ynthetic methods differently
+JavaStackFramesPreferencePage_Filter_platform=Mark &platform methods differently
+JavaStackFramesPreferencePage_Filter_test=Mark your &test code differently
+JavaStackFramesPreferencePage_Filter_production=Mark your &source code differently
+JavaStackFramesPreferencePage_Filter_library=Mark &library code differently
+
+JavaStackFramesPreferencePage_Add__Filter=Add &Filter...
+JavaStackFramesPreferencePage_Add__Package=Add &Packages...
+JavaStackFramesPreferencePage_Add__Type=Add &Class...
+JavaStackFramesPreferencePage_Remove=&Remove
+JavaStackFramesPreferencePage_Enable_All=&Enable All
+JavaStackFramesPreferencePage_Disable_All=D&isable All
+
+JavaStackFramesPreferencePage_Add_package_for_stack_filters=Add Packages to Stack Filters
+JavaStackFramesPreferencePage_Select_a_package_for_stack_filter=&Select a package for stack filtering:
+JavaStackFramesPreferencePage_Add_type_for_stack_filters=Add Class to Stack Filters
+JavaStackFramesPreferencePage_Select_a_type_for_stack_filter=&Select a class for stack filtering:
+
 JavaStepFilterPreferencePage_Filter_co_nstructors_19=Filter co&nstructors
 JavaStepFilterPreferencePage_Filter_s_ynthetic_methods__requires_VM_support__17=Filter s&ynthetic methods (requires VM support)
 JavaStepFilterPreferencePage_Filter_static__initializers_18=Filter static &initializers
