Add an action to highlight the current stack frame for debugging

--- a/org.eclipse.jdt.debug.ui/plugin.properties
+++ b/org.eclipse.jdt.debug.ui/plugin.properties
@@ -189,6 +189,9 @@ collapseStackFrames.tooltip=Hide less relevant stack frames
 colorizeStackFrames.label=Mark Stack Frames with &Colors
 colorizeStackFrames.tooltip=Based on the function mark the stack frames with different colors
 
+highlightStackFrame.label=Highlight Stack Frame
+highlightStackFrame.tooltip=Always mark this stack frame distinctly
+
 stepIntoSelectionHyperlinkDetector.label=Step Into Selection
 stepIntoSelectionHyperlinkDetector.description=Performs the step into selection command on demand via a hyperlink
 
