--- a/org.eclipse.jdt.debug.ui/plugin.xml
+++ b/org.eclipse.jdt.debug.ui/plugin.xml
@@ -4108,4 +4108,9 @@ M4 = Platform-specific fourth key
     </variable>
  </extension>
 
+ <extension point="org.eclipse.e4.ui.css.swt.theme">
+    <stylesheet uri="css/e4-dark_jdi_debug_prefstyle.css">
+      <themeid refid="org.eclipse.e4.ui.css.theme.e4_dark"></themeid>
+    </stylesheet>
+  </extension>
 </plugin>
